--- a/exec/포팅 매뉴얼.md
+++ b/exec/포팅 매뉴얼.md
@@ -1,12 +1,15 @@
-
 # SSAFY_6th_Sub_PJT
+
 ### SSAFY 6기 공통 프로젝트
+
 <ul>
   <li>'해줘잉' 프로젝트는 React, Spring Boot, MyBatis를 활용한 SNS 서비스 프로젝트 입니다.</li>
   <li>SNS를 많이 사용하는 젊은층을 대상으로 하여 자신의 고민을 여러 사람들과 공유하여 해결할 수 있는 서비스 입니다.</li>
 </ul>
 
+
 #### 프로젝트 산출물
+
 <ul>
   <li>E-R Diagram</li>
   <p align="center">
@@ -26,7 +29,9 @@
   </p>
 </ul>
 
+
 #### 빌드 및 배포
+
 <ul>
   <li>
     <b>사용한 JVM, 웹서버, WAS 제품  등의 종류와 설정값, 버전(IDE 버전 포함)</b>
@@ -43,13 +48,12 @@
       <img width="800px", src="https://github.com/swchae516/SSAFY_6th_Sub_PJT/blob/main/%EC%8B%9C%EC%8A%A4%ED%85%9C%20%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98.png?raw=true" />
     </p>
   </li>
-  
   <li>
     <b>포트 번호</b>
     <p>[Front-end] : 3000</p>
     <p>[Back-end] : 8080</p>
     <p>[Database] : 3306</p>
-    <b>Version</b>
+​    <b>Version</b>
     <ul>
       <li>[Front-end] : eact 17.0.2 , react-bootstrap 2.1.1, style-component 5.3.3 , web-vitals 2.1.3</li>
       <li>[Back-end] : 웹서버 : SpringBoot 2.5.9, Java : 11.0.13, jwt auth, Spring Security</li>
@@ -72,6 +76,7 @@
   </li>
   <li>
     <b>Front-end</b>
+
     <p align="center">
       <img width="600px", src="https://github.com/swchae516/SSAFY_6th_Sub_PJT/blob/main/%ED%94%84%EB%A1%A0%ED%8A%B8.PNG?raw=true" />
     </p>
